--- a/QTLtools/README
+++ b/QTLtools/README
@@ -2,4 +2,6 @@ Pipeline to run QTLtools
 
 1- Make sure your vcf file is bgzipped and indexed with tabix
 
-2- QTLtools requires special formatting of .bed.gz file. See: https://qtltools.github.io/qtltools. Run 
+2- QTLtools requires special formatting of .bed.gz file. See: https://qtltools.github.io/qtltools. Run qtltools_bedfile_prep.R to make the necessary changes
+
+3- Af
