--- a/QTLtools/README
+++ b/QTLtools/README
@@ -4,4 +4,8 @@ Pipeline to run QTLtools
 
 2- QTLtools requires special formatting of .bed.gz file. See: https://qtltools.github.io/qtltools. Run qtltools_bedfile_prep.R to make the necessary changes
 
-3- Af
+3- Run QTLtools.sh to run QTLtools. Adjust covariate files and other parameters as needed
+
+Optional
+
+4- After running nominal pass, files can be large and you may need to filter based on significance. Run 
