--- a/QTLtools/README
+++ b/QTLtools/README
@@ -6,6 +6,6 @@ Pipeline to run QTLtools
 
 3- Run QTLtools.sh to run QTLtools. Adjust covariate files and other parameters as needed
 
-Optional
+4- (Optional) After running nominal pass, files can be large and you may need to filter based on significance. Run sqtl_filter.sh which runs sqtl_filter.R to filter out pvalues greater than FDR 5%. Adjust sqtl_filter.R to change FDR threshold
 
-4- After running nominal pass, files can be large and you may need to filter based on significance. Run sqtl_filter.sh which runs sqtl_filter.R to filter out pvalues greater than FDR 5%. Adjust sqtl_filter.R to change FDR threshold
+5- Run 
